cmake_minimum_required(VERSION 3.28)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1
        laba1/String.h
        laba1/String.cpp
        laba1/Test.h
        laba1/Test.cpp
        laba1/main.cpp
        laba1/Binarystring.cpp
        laba1/Binarystring.h
        laba1/ToDolist.cpp
        laba1/ToDolist.h
        laba1/List.h
        laba1/Exeption.cpp
        laba1/Exeption.h
        laba1/Twoqueue.h
        laba1/Multimap.h
)
